src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 608 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
